log
Wed, Mar 26, 2025  8:38:26 AM: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|6
total_score: 0/70
25021aa
Wed, Mar 26, 2025  8:39:41 AM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
873170f
Wed, Mar 26, 2025  8:43:47 AM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|5
total_score: 15/70
458e1ee
Wed, Mar 26, 2025  8:46:04 AM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:46:25: error: 'List {aka struct List}' has no member named 'next'
     list->current = list->next;
                         ^~
Compilation failed
957426b
Wed, Mar 26, 2025  8:46:45 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6671621
Wed, Mar 26, 2025  8:48:19 AM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
7e18185
Wed, Mar 26, 2025  8:51:27 AM: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:57:18: error: passing argument 1 of 'nextList' from incompatible pointer type [-Werror=incompatible-pointer-types]
         nextList(aux);
                  ^~~
list.c:45:8: note: expected 'List * {aka struct List *}' but argument is of type 'Node * {aka struct Node *}'
 void * nextList(List * list) {
        ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
c892341
Wed, Mar 26, 2025  8:53:48 AM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
5f3ab1c
Wed, Mar 26, 2025  8:55:00 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 25/70
3c4ef2d
Wed, Mar 26, 2025  8:55:33 AM: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:60:12: error: 'data' undeclared (first use in this function)
     return data;
            ^~~~
list.c:60:12: note: each undeclared identifier is reported only once for each function it appears in
list.c:61:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
cdbefa7
Wed, Mar 26, 2025  8:56:04 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:60:15: error: 'Node {aka struct Node}' has no member named 'current'
     return aux->current->data;
               ^~
list.c:61:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
10d29b9
Wed, Mar 26, 2025  8:58:56 AM: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:54:17: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     List* aux = list->current;
                 ^~~~
list.c:57:13: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
         aux = aux->current->next;
             ^
cc1.exe: all warnings being treated as errors
Compilation failed
0f3e1d9
Wed, Mar 26, 2025  9:00:30 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:54:17: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     List* aux = list->current;
                 ^~~~
list.c:57:13: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
         aux = aux->current->next;
             ^
list.c:58:22: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
         aux->current = aux;
                      ^
cc1.exe: all warnings being treated as errors
Compilation failed
c2196a6
Wed, Mar 26, 2025  9:01:58 AM: 
 list.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
 tests:  5|4
total_score: 25/70
cbf60cd
Wed, Mar 26, 2025  9:02:46 AM: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:59:15: error: 'Node {aka struct Node}' has no member named 'current'
     return aux->current->data;
               ^~
list.c:60:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
4e3d007
Wed, Mar 26, 2025  9:03:31 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
aab5438
Wed, Mar 26, 2025  9:05:07 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|4
total_score: 25/70
d5b40d2
